[package]
name = "github_webhooks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws_lambda_events = "0.13.0"
lambda_runtime = "0.9.1"
serde_json = "1.0.111"
tokio = "1.35.1"
warp = "0.3.6"

[dev-dependencies]
cross = "0.2.5"
